--- a/index.html
+++ b/index.html
@@ -1,20 +1,32 @@
-<div id="wrapper">
-  <div id="title"><h1>Tic Tac Toe</h1></div>
-  <div id="container">
-    
-    <div class = "item item_1" id="0"></div>
-    <div class = "item item_2" id="1"></div>  
-    <div class = "item item_3" id="2"></div>
-    <div class = "item item_1" id="3"></div>
-    <div class = "item item_1" id="4"></div>
-    <div class = "item item_1" id="5"></div>
-    <div class = "item item_1" id="6"></div>
-    <div class = "item item_1" id="7"></div>
-    <div class = "item item_1" id="8"></div>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+<body>
+  <div id="wrapper">
+    <div id="title"><h1>Tic Tac Toe</h1></div>
+    <div id="container">
+      
+      <div class = "item item_1" id="0"></div>
+      <div class = "item item_2" id="1"></div>  
+      <div class = "item item_3" id="2"></div>
+      <div class = "item item_1" id="3"></div>
+      <div class = "item item_1" id="4"></div>
+      <div class = "item item_1" id="5"></div>
+      <div class = "item item_1" id="6"></div>
+      <div class = "item item_1" id="7"></div>
+      <div class = "item item_1" id="8"></div>
+  
+    </div>
+    <footer id="footer">
+      <button id="btnStart">Start Game</button>
+      <button id="btnReset">Reset</button>
+    </footer>
   </div>
-  <footer id="footer">
-    <button id="btnStart">Start Game</button>
-    <button id="btnReset">Reset</button>
-  </footer>
-</div>
+</body>
+</html>
+
